--- a/05_FirstStepsInJavaWithSpringBoot/rest-with-spring-boot-and-java-lrfs/src/main/resources/application.yml
+++ b/05_FirstStepsInJavaWithSpringBoot/rest-with-spring-boot-and-java-lrfs/src/main/resources/application.yml
@@ -6,8 +6,12 @@ spring:
     password: naoconto
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
       show-sql: false
+springdoc:
+  pathsToMatch: /api/**/v1/**
+  swagger-ui:
+    use-root-path: true
