--- a/05_FirstStepsInJavaWithSpringBoot/rest-with-spring-boot-and-java-lrfs/src/main/resources/application.yml
+++ b/05_FirstStepsInJavaWithSpringBoot/rest-with-spring-boot-and-java-lrfs/src/main/resources/application.yml
@@ -1,7 +1,12 @@
 server:
   port: 8080
 cors:
-  originPatterns: "uol.com.br"
+  originPatterns: "localhost"
+security:
+  jwt:
+    token:
+      secret-key: 53cr37
+      expire-length: 3600000
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -16,6 +21,8 @@ spring:
         dialect: org.hibernate.dialect.MySQL8Dialect
       show-sql: false
 springdoc:
-  pathsToMatch: /api/**/v1/**
+  pathsToMatch: 
+    - /auth/**
+    - /api/**/v1/**
   swagger-ui:
     use-root-path: true
